# IU-ISEF-QUIZ

./: .gitignore  ISEF.kdbx  LICENSE  README.MD  application.py  pyproject.toml  requirements.txt
.github/workflows/: main_brainbear-super-app.yml  main_brainbeard-qs.yml
templates/: 404.html  base.html  help.html  index.html  menu.html
